@@ -1,3 +1,6 @@
+25-April-2012 Michael Babker
+~ Set default tweet text to article title if plugin param not set
+
 24-February-2012 Michael Babker
 + Add it-IT translation
 
